Refaktorert en del code smells og begynt på migrering over til java 20 og deretter 21 #deploy-test-dolly-backend