@@ -11,7 +11,6 @@ import lombok.Setter;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static java.util.Objects.isNull;
 
@@ -22,45 +21,26 @@ import static java.util.Objects.isNull;
 @JsonInclude(JsonInclude.Include.NON_EMPTY)
 public class RsDokarkiv {
 
-    public enum JournalPostType {
-
-        INNGAAENDE, UTGAAENDE, NOTAT
-    }
-
-    public enum IdType {
-
-        FNR, ORGNR, HPRNR, UTL_ORG
-    }
-
     @Schema(description = "Tittel som beskriver forsendelsen samlet, feks \"Søknad om dagpenger ved permittering\"")
     private String tittel;
-
     private JournalPostType journalpostType;
-
     @Schema(description = "Temaet som forsendelsen tilhører, for eksempel “DAG” (Dagpenger)")
     private String tema;
-
     @Schema(description = "Behandlingstema for forsendelsen, for eksempel ab0001 (Ordinære dagpenger).")
     private String behandlingstema;
-
     @Schema(description = "Kanalen som ble brukt ved innsending eller distribusjon. F.eks. NAV_NO, ALTINN eller EESSI.")
     private String kanal;
-
     @Schema(description = "NAV-enheten som har journalført, eventuelt skal journalføre, forsendelsen. "
             + "Ved automatisk journalføring uten mennesker involvert skal enhet settes til \"9999\".\n"
             + "Konsument må sette journalfoerendeEnhet dersom tjenesten skal ferdigstille journalføringen.")
     private String journalfoerendeEnhet;
-
     @Schema(description = "AvsenderMottaker")
     private AvsenderMottaker avsenderMottaker;
-
     @Schema(description = "Første dokument blir tilknyttet som hoveddokument på journalposten. "
             + "Øvrige dokumenter tilknyttes som vedlegg. Rekkefølgen på vedlegg beholdes ikke ved uthenting av journalpost.")
     private List<Dokument> dokumenter;
-
     @Schema(description = "Forsøker å ferdigstille dokument etter innsending")
     private Boolean ferdigstill;
-
     @Schema(description = "Saken i PSAK eller GSAK som dokumentene skal journalføres mot.")
     private Sak sak;
 
@@ -69,6 +49,16 @@ public class RsDokarkiv {
             dokumenter = new ArrayList<>();
         }
         return dokumenter;
+    }
+
+    public enum JournalPostType {
+
+        INNGAAENDE, UTGAAENDE, NOTAT
+    }
+
+    public enum IdType {
+
+        FNR, ORGNR, HPRNR, UTL_ORG
     }
 
     @Builder
@@ -91,6 +81,7 @@ public class RsDokarkiv {
                 "Navn på personbrukere skal lagres på formatet etternavn, fornavn mellomnavn")
         private String navn;
     }
+
     @Getter
     @Setter
     @Builder
@@ -99,13 +90,15 @@ public class RsDokarkiv {
     @JsonInclude(JsonInclude.Include.NON_EMPTY)
     public static class Dokument {
 
-        @Schema(description = "Dokumentets tittel, f.eks. \"Søknad om dagpenger ved permittering\".\n" +
-                "Dokumentets tittel blir synlig i brukers journal på nav.no, samt i Gosys.")
+        @Schema(description = """
+                Dokumentets tittel, f.eks. "Søknad om dagpenger ved permittering".
+                Dokumentets tittel blir synlig i brukers journal på nav.no, samt i Gosys.""")
         private String tittel;
 
-        @Schema(description = "Typen dokument. Brevkoden sier noe om dokumentets innhold og oppbygning.\n" +
-                "For inngående dokumenter kan brevkoden være en NAV-skjemaID f.eks. “NAV 04-01.04” eller en SED-id.\n" +
-                "Brevkode skal ikke settes for ustrukturert, uklassifisert dokumentasjon, f.eks. brukeropplastede vedlegg.")
+        @Schema(description = """
+                Typen dokument. Brevkoden sier noe om dokumentets innhold og oppbygning.
+                "For inngående dokumenter kan brevkoden være en NAV-skjemaID f.eks. “NAV 04-01.04” eller en SED-id.
+                "Brevkode skal ikke settes for ustrukturert, uklassifisert dokumentasjon, f.eks. brukeropplastede vedlegg.""")
         private String brevkode;
 
         @Schema(description = "DokumentVariant")
@@ -123,7 +116,8 @@ public class RsDokarkiv {
             return String.format("Dokument{tittel='%s', brevkode='%s', dokumentvariantListe=%s}",
                     tittel,
                     brevkode,
-                    dokumentvarianter.stream().map(DokumentVariant::toString).collect(Collectors.toList()));
+                    dokumentvarianter.stream().map(DokumentVariant::toString)
+                            .toList());
         }
 
         @Data
@@ -139,11 +133,12 @@ public class RsDokarkiv {
             @Schema(description = "Selve dokumentet. Hvis filtype er PDF/XML, ved fysisk dokument brukes bytearray.")
             private String fysiskDokument;
 
-            @Schema(description = "ARKIV brukes for dokumentvarianter i menneskelesbart format (for eksempel PDFA). "
-                    + "Gosys og nav.no henter arkivvariant og viser denne til bruker.\n"
-                    + "ORIGINAL skal brukes for dokumentvariant i maskinlesbart format "
-                    + "(for eksempel XML og JSON) som brukes for automatisk saksbehandling\n"
-                    + "Alle dokumenter må ha én variant med variantFormat ARKIV.")
+            @Schema(description = """
+                    ARKIV brukes for dokumentvarianter i menneskelesbart format (for eksempel PDFA).
+                    Gosys og nav.no henter arkivvariant og viser denne til bruker.
+                    ORIGINAL skal brukes for dokumentvariant i maskinlesbart format
+                    (for eksempel XML og JSON) som brukes for automatisk saksbehandling
+                    Alle dokumenter må ha én variant med variantFormat ARKIV.""")
             private String variantformat;
 
             @Override
